# LEI-Pedro-Peter

./: Artigos.txt  LEI.txt  README.md  package-lock.json
Code/: app copy.js  index.html  index2.html  index3.html  index4.html  indextest.html  spectrum.js  waves.css
Code/shaders/: vs.vert
Shader Example/computeShader/: imgui.ini
Shader Example/imageProcessing/: imgui.ini
VSL - Ocean/: CMakeLists.txt  vsconfig.vcxproj.user.in
VSL - Ocean/VSL/: CMakeLists.txt
VSL - Ocean/VSL/include/: vslConfig.h.in
VSL - Ocean/VSL/include/vsl/: vsGeometryLib.h  vsModelLib.h  vslConfig.h
VSL - Ocean/VSL/source/: vsGeometryLib.cpp  vsModelLib.cpp
VSL - Ocean/contrib/assimp3.3.1/buildandroid/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  ZERO_CHECK.vcxproj  (+6 more)
VSL - Ocean/demo/: CMakeLists.txt
VSL - Ocean/demo/source/: config.h  vslDemo.cpp
VSL - Ocean/shaders/: butterflyH - Copy.comp  butterflyH.comp  butterflyV.comp  defines.glsl  definesGlobal.glsl  directional.glsl  fft_hkt.comp  pixeldirdifambspec.frag
ocean - modificado/common/shaders/: butterflyH.comp  butterflyH_cascades.comp  butterflyV_cascades.comp  defines.glsl  definesGlobal.glsl  dispersion.glsl  oceanColor.cascades.glsl  oceanColor.glsl
ocean - modificado/new/: butterflyH.frag  butterflyV.frag  fft.vert  fft_h0.frag  fft_hkt.frag  ocean.frag  ocean.vert
ocean - modificado/tessendorfOceanGrid/: Ocean__h0k.raw  imgui.ini  tessendorf.mlib  tessendorf.xml
ocean - modificado/tessendorfOceanGrid/scripts/: ocean.lua
ocean - modificado/tessendorfOceanGrid/shaders/: lambert.vert  mipmapLuminance.comp  ocean.frag
ocean - modificado/tessendorfTessellation/: atmos3.mlib  imgui.ini  tessendorfTessellation.mlib
ocean - modificado/tessendorfTessellation/shaders/: mipmap.comp  sky3.frag  tessDemo.frag  tessDemo.tesc  tessDemo.vert
ocean/common/shaders/: butterflyV.comp  directional.glsl  fft_h0.first.cascades.comp  fft_h0.main.comp  header.glsl  sky.glsl
ocean/tessendorfOceanGrid/: cam.txt  imgui.ini  tessendorf.mlib  tessendorf.xml
ocean/tessendorfOceanGrid/scripts/: fft.lua
ocean/tessendorfOceanGrid/shaders/: lambert.frag  ocean.vert  oceanHeader.glsl
ocean/tessendorfTessellation/: imgui.ini  log.txt  tessendorfTessellation.xml
ocean/tessendorfTessellation/scripts/: interface.lua
ocean/tessendorfTessellation/shaders/: lambert.frag  lambert.vert  sky.vert  skyTexture.frag  tessDemo.tese  tessDemoFrag-data.glsl
(+55 files in other folders)
